# kgrok

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
.github/workflows/: docker-image.yml  python-publish.yml  test.yml
examples/join-an-existing-service/: README.md
examples/simple-echo-server/: README.md  echo.go
src/kgrok/: local.py  messages.py  remote.py
tests/kgrok/: test_local.py  test_messages.py  test_remote.py
