[project]
name        = "kgrok"
description = "forward local processes into k8s cluster"
version     = "0.1.0"

[project.scripts]
kgrok        = "kgrok.local:main"
kgrok-remote = "kgrok.remote:main"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]
trio_mode = true

[tool.ruff]
src = ["src", "test"]
