[project]
name        = "kgrok"
description = "forward local processes into k8s cluster"
version     = "0.1.0"

[project.scripts]
kgrok        = "kgrok.local:main"
kgrok-remote = "kgrok.remote:main"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]
trio_mode = true

[tool.ruff]
src = ["src", "test"]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "E4", "E7", "E9", "F",  # defaults
  "ASYNC",
  "TRIO",
]
